_SOFTWARE_FACTORY/_archive/veligo/ralph-wiggum/logs/swarm/worker_14_20260115_084711.log
[08:47:11] Worker 14 starting (queue: tdd)
[08:47:35] Worker 14: Processing T1488
[0;32m[AGENT] Real Agent starting[0m
[0;34m[AGENT] Task: /Users/sylvain/_LAPOSTE/_VELIGO2/tools/ralph-wiggum/tasks/T1488.md[0m
[0;34m[AGENT] Queue: tdd[0m
[0;34m[AGENT] Backend: opencode (minimax/MiniMax-M2.1)[0m
[0;32m[AGENT] Starting task: T1488[0m
[0;34m[AGENT] Iteration 1/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -15): [91m[1m| [0m[90m Bash     [0mRun cargo test --lib to check test status

   Compiling veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/bike_service[0m
[0;33m[AGENT] No actions found in response[0m
[0;34m[AGENT] Iteration 2/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -9): [91m[1m| [0m[90m Bash     [0mRun cargo test --lib to check current state

    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
   Compiling veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_serv[0m
[0;33m[AGENT] No actions found in response[0m
[0;34m[AGENT] Iteration 3/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
[0;31m[AGENT] opencode failed (exit -15): [0m

============================================================
RESULT: FAILED
============================================================
files. I'll use fractal_delegate to break this down:
[91m[1m| [0m[90m Bash     [0mRun cargo test --lib to check test status

   Compiling veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/bike_service.rs:23:1
   |
23 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/rental_service.rs:25:1
   |
25 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nigh

=== LLM Response ===
The backend has significant compilation errors. This is a complex task requiring fixes across multiple files. Let me delegate to sub-agents:
Now I have a clear picture of all the issues. This is a complex task involving multiple files. Let me fix them systematically:
[91m[1m| [0m[90m Bash     [0mRun cargo test --lib to check current state

    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on build directory
   Compiling veligo-backend v0.1.0 (/Users/sylvain/_LAPOSTE/_VELIGO2/veligo-platform/backend)
error: expected a trait impl
  --> backend/src/services/user_service.rs:20:1
   |
20 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/bike_service.rs:23:1
   |
23 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/rental_service.rs:25:1
   |
25 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected a trait impl
  --> backend/src/services/auth_service.rs:27:1
   |
27 | #[async_trait]
   | ^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `async_trait` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `chrono`
 --> backend/src/services/user_service.rs:6:5
  |
6 | use chrono::Utc;
  |     ^^^^^^ use of unresolved module or unlinked crate `chrono`
  |
  = help: if you wanted to use a crate named `chrono`, use `cargo ad

ERROR: LLM call failed
[08:51:37] Worker 14: T1488 FAILED (exit 1)
[08:52:19] Worker 14: Processing T1542
[0;32m[AGENT] Real Agent starting[0m
[0;34m[AGENT] Task: /Users/sylvain/_LAPOSTE/_VELIGO2/tools/ralph-wiggum/tasks/T1542.md[0m
[0;34m[AGENT] Queue: tdd[0m
[0;34m[AGENT] Backend: opencode (minimax/MiniMax-M2.1)[0m
[0;32m[AGENT] Starting task: T1542[0m
[0;34m[AGENT] Iteration 1/10[0m
[0m[AGENT] Calling opencode with model: minimax/MiniMax-M2.1[0m
